# deep-learning

./: .gitignore  README.md  augment.py  dataset.py  eda.ipynb  losses.py  main.py  move.py  pyproject.toml  simple_cnn.py  test.py  train.py
data/: answer.csv
