[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
torch = "*"
poethepoet = "*"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
torchvision = "^0.21.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch torchaudio torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]
